<resources>
    <string name="app_name">CarchaCatherineBhelExam1</string>
    <string name="todo1">TODO</string>
    <string name="note_1">NOTE 1</string>
    <string name="note_2">NOTE 2:</string>
    <string name="todo2">TODO</string>
    <string name="lorem_ipsum_dolor_sit_amet_consectetur_adipiscing_elit_sed_do_eiusmod_tempor_incididunt_ut_labore_et_dolore_magna_aliqua_ut_enim_ad_minim_veniam_quis_nostrud_exercitation_ullamco_laboris_nisi_ut_aliquip_ex_ea">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea</string>
    <string name="public_notes">Public Notes</string>
    <string name="office_notes">Office Notes</string>
    <string name="personal_notes">Personal Notes</string>
    <string name="lorem_ipsum_dolor_sit_amet_consectetur_adipiscing_elbzh_gcshlbchdsbfhdbsfhdsbfbds_fndsn">Lorem ipsum dolor sit amet, consectetur adipiscing elbzh,gcshlbchdsbfhdbsfhdsbfbds,fndsn</string>
    <string name="android">ANDROID</string>
    <string name="todo">TODO</string>

</resources>
